position fixed, hide main window scrollbar on fullscreen

--- a/angular-arrangeable-files.css
+++ b/angular-arrangeable-files.css
@@ -17,13 +17,14 @@
 }
 
 .arrangeable-files .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   padding: 20px;
   background: #F2FAFA;
+  overflow: auto;
 }
 
 .arrangeable-files .overlay > button {
